# spanner-rss-anomaly-checker

./: .gitignore  README.md
checker/: analysis.py  checker.py  result.md
experiments/: run_multiple_experiment_configs.py
experiments/configs/lvt/: 0.5-inter-global.json  0.5-inter-local.json  0.5-intra-global.json  0.5-intra-local.json
experiments/configs/tt-10ms/inter/: 0.5-inter-global.json  0.5-inter-local.json  0.7-inter-global.json  0.7-inter-local.json  0.9-inter-global.json  0.9-inter-local.json
experiments/configs/tt-10ms/intra/: 0.5-intra-global.json  0.5-intra-local.json  0.7-intra-global.json  0.7-intra-local.json  0.9-intra-global.json  0.9-intra-local.json
experiments/configs/tt-4ms/inter/: 0.5-inter-global.json  0.5-inter-local.json  0.7-inter-global.json  0.7-inter-local.json  0.9-inter-global.json  0.9-inter-local.json
experiments/configs/tt-4ms/intra/: 0.5-intra-global.json  0.5-intra-local.json  0.7-intra-global.json  0.7-intra-local.json  0.9-intra-global.json  0.9-intra-local.json
experiments/lib/: rss_codebase.py
experiments/utils/: eval_util.py  experiment_util.py  remote_util.py
src/rss/: lib.cc
src/store/: CMakeLists.txt
src/store/benchmark/async/: CMakeLists.txt  bench_client.cc  benchmark.cc
src/store/strongstore/: CMakeLists.txt  client.cc  client.h  server.cc  server.h  shardclient.cc  shardclient.h  strong-proto.proto
